--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ng-circle-progress": "^1.6.0",
     "ngx-counter": "^0.3.2",
     "ngx-dropzone": "^3.1.0",
+    "ngx-pagination" : "6.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
