--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "ng-circle-progress": "^1.6.0",
     "ngx-counter": "^0.3.2",
     "ngx-dropzone": "^3.1.0",
-    "ngx-pagination" : "6.0.1",
+    "ngx-pagination": "6.0.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.18",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
